# Mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friend_service.cc  user_service.cc
example/caller/: CMakeLists.txt  call_friend_service.cc  call_user_service.cc
include/: lock_queue.h  logger.h  mprpc_application.h  mprpc_channel.h  mprpc_provider.h  rpc_header.pb.h  zookeeper_util.h
include/dualbuf_logger/: Condition.h  CountDownLatch.h  LogFile.h  LogStream.h  Logging.h  Thread.h  noncopyable.h
lib/: readme.txt
src/: CMakeLists.txt  logger.cc  mprpc_application.cc  mprpc_channel.cc  mprpc_config.cc  mprpc_provider.cc  rpc_header.pb.cc  rpc_header.proto  zookeeper_util.cc
src/dualbuf_logger/: AsyncLogging.cpp  CountDownLatch.cpp  Logging.cpp
src/include/: lock_queue.h  logger.h  mprpc_config.h
test/dualbuf_logger/: Log的设计.txt  test.cpp
test/dualbuf_logger/include/: AsyncLogging.h  CurrentThread.h  FileUtil.h  MutexLock.h
test/dualbuf_logger/src/: FileUtil.cpp  LogFile.cpp  LogStream.cpp  Logging.cpp  LoggingTest.cpp  Thread.cpp
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
wly_notes/: wly_notes.md
